--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,11 @@
-  version: 2
-  updates:
-    - directory: /
-      package-ecosystem: gomod
-      schedule:
-        interval: daily
+version: 2
+updates:
+  - directory: /
+    package-ecosystem: gomod
+    schedule:
+      interval: daily
+
+  - directory: /
+    package-ecosystem: github-actions
+    schedule:
+      interval: daily
